some basic conf added

--- a/driver-service/src/main/resources/application.properties
+++ b/driver-service/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-server.port=8090
+server.port=8091
+spring.application.name=driver-service
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.datasource.url=jdbc:postgresql://localhost:5432/driver-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/task-sample
 
 spring.jpa.hibernate.ddl-auto=update
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
