--- a/race-service/src/main/resources/application.properties
+++ b/race-service/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-server.port=8092
+server.port=8093
+spring.application.name=race-service
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.datasource.url=jdbc:postgresql://localhost:5432/race-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/task-sample
 
 spring.jpa.hibernate.ddl-auto=update
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
